# geonode

./: .clabot  .dockerignore  .env  .env.sample  .env_dev  .env_external.sample  .env_local  .env_test  .env_tosca_dev  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .travis.yml.new  AUTHORS  CHANGELOG.md  CLAUDE.md  CLA_INDIVIDUAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.  CONTRIBUTING.md  Dockerfile  Flood-Hazard-Error-Log.txt  GeoExplorer.js  LICENSE  MANIFEST.in  Makefile  README  README.md  README.release.rst  README.rst  README_52n.md  README_thuenen.md  REQUIREMENTS.txt  SECURITY.md  (+125 more)
.Trash-1000/files/: layer_home.html
.Trash-1000/info/: _layer_list_item0.html.trashinfo  layer_home.html.trashinfo  template_tags.2.trashinfo  template_tags.py.trashinfo  template_tags.trashinfo  templatetags.trashinfo
.circleci/: config.yml
.devcontainer/: .env  Dockerfile  README.md  devcontainer.json  docker-compose-decontainer.yml  docker-compose.yml  docker.sh
.devcontainer/_vscode/: geonode.code-workspace  launch.json
.git-backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-backup/logs/: HEAD
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  gnip.md  report_issue.md  task_docs_others.md
.github/workflows/: 52n-build-4.2.x.yml  52n-build-master.yml  52n-build.yaml  52n-dockerhub-description.yaml  52n-release.yaml  52n-release.yml  _geonode-build.yml  backport.yml  build-and-push.yaml  codeql-analysis.yml  codeql.yml  docker-ci.yml  docker-publish.yml  dockerhub-description.yml  flake8.yml  geonode-tests.yml  geoserver-data-publish.yml  pysa.yml  release.yaml  ruff.yml  run-test-suite.yml  stale.yml  tests.yml
.tx/: config
Informações para o commit no git (GeoNode 2.10)/: READ-ME - Database.txt  READ-ME - GeoNode(V2.10) Customizations.txt  base_resourcebase UPDATE SET.txt  embrapa_authors_resourcebase tratados (ids).txt  embrapa_autores tratados.txt  embrapa_data_quality_statements tratados.txt  embrapa_data_quality_statements_resourcebase tratados (ids).txt  embrapa_keywords tratados.txt  hierarchicalkeywords - ids tratados.txt  hierarchicalkeywords tratados.txt  keywords_embrapa - ids tratados.txt
announcements/: admin.py  auth_backends.py  forms.py  models.py  signals.py  urls.py  views.py
app/: autoloader.js  config.js  main.js  proxy.js  util.js
app/root/: proxy.js
app/static/: index.html
cpt/: admin.py  apps.py  db_design.drawio  models.py  readme.md  serializers.py  urls.py  views.py
cpt/api/: serializers.py  urls.py  views.py
database/: Dockerfile  docker-entrypoint.sh
debian/: README.rst  changelog  config  control  copyright
django_cas_ng/: __init__.py  backends.py  decorators.py  middleware.py  signals.py  utils.py  views.py
docs/: DREAM-RB_FP.csv  Dockerfile  Makefile  Phil-LiDAR1-RB-FP.csv  README.md  RIDF_municipality.csv  about.txt  build.sh  conf.py  contribute_docu.md  index.rst  index.txt  make.bat  mkdocs.yml  pdf_event_hook.py  requirements.txt  todo.rst
docs-site/: LICENSE  README.md  mkdocs.yml  requirements.txt
docs_old/: conf.py
etc/: hotspot_compiler
examples/: create_funder.py  create_related_identifier.py  test_rest.py
geonode/: .gitignore  __init__.py  approve_comment_subjects.txt  apps.py  authentication_decorators.py  base_schema.json  celery_app.py  class_factory.py  compat.py  context_processors.py  custom_translations.py  db_connections.py  decorators.py  deny_comment_subjects.txt  development_.db  development_20201110.db  docker_settings.py  flexidates.py  geonetwork.py  geonode.7z  geonode.wsgi  get_duplicates.py  gs_helpers.py  gwc.sh  loaders.py  local_settings.geoserver.sample  local_settings.py  local_settings.py.docker  local_settings.py.geoserver.sample  local_settings.py.geoserver_psql.sample  local_settings.py.psql_test  local_settings.py.qgis.sample  local_settings.py.sample  local_settings.py.tmpl  local_settings.py.worldmap.sample  local_settings_development.py  local_settings_gaz.py  local_settings_polls.py.bak  middleware.py  model_schema.py  (+19 more)
geonode-client/: build.xml  buildjs.cfg
geonode-docker-master/: LICENSE  README.md
geosafe/: __init__.py  admin.py  celery.py  forms.py  geonode.kartoza.nginx.conf  models.py  signals.py  urls.py  views.py
geoserver/: jetty-runner.xml
geoserver-geonode-ext/: assembly.xml  jetty.xml  pom.xml  startup.sh
gn_schema/: extract-gml.xsl  extract-thumbnails.xsl  extract-uuid.xsl  index-fields.xsl  schema-substitutes.xml  schema-suggestions.xml  schema.example.extended.xml  schema.example.minimal.xml  schema.xsd  schematron.xsl  schematron_verbid.xsl  schematron_xml.xsl  set-thumbnail.xsl  set-uuid.xsl  unset-thumbnail.xsl  update-fixed-info.xsl
hooks/: build  test
index/: index.dbf  index.shp  index.shx  wfsrequest.txt
newdocs/: conf.py  index.txt
old_docs/: Makefile  index.txt
package/: README  install.sh  pavement.py
phl_adm2_municipalities_utm_z51n/: phl_adm2_municipalities_utm_z51n.dbf  phl_adm2_municipalities_utm_z51n.prj  phl_adm2_municipalities_utm_z51n.shx  wfsrequest.txt
schema/: .project  ReadMe.txt  world-bank-geonode-schema.xsd
scripts/: backup_postgresql.sh  clokins.exclude  fabfile.py  jenkins-geonode-dev.sh  restore_postgresql.sh
shared/: build.ini  core-libs-win.txt  core-libs.txt  dev-libs.txt  dev-paste.ini  dev-requirements.txt  devkit.requirements  future-libs.txt  geonode-requirments.txt  py-base-libs.txt  requirements.txt
source/: about-geonode.rst  deployment.rst  django-apps.rst  geonetwork-extensions.rst  geonode-javascript.rst  geoserver-extensions.rst  getting-started.rst  index.rst
templatetags/: announcements_tags.py
tests/: geonode_tests.py  integration.py  pavement.py  runner.py  test_api_v2.sh  test_csw.sh  test_integration.sh  test_upload.sh  utils.py
tosca-geoserver/: readme.md
user_messages/: admin.py  context_processors.py  forms.py  managers.py  models.py  signals.py  urls.py  utils.py  views.py
(+9475 files in other folders)
