[tool.black]
line-length = 120
target-version = ['py35']
exclude = '''
/(
    geonode/.*/migrations/.*
  | geonode/.*/settings.py
  | management
  | scripts
  | docs
  | static
  | migrations
  | node_modules
)/
'''

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
