[metadata]
name = GeoNode
description = Application for serving and sharing geospatial data
license = GPL
author = GeoNode Developers
author_email = dev@geonode.org
url = http://geonode.org
download_url = https://github.com/cesar-benjamin/geonode/archive/refs/heads/4.2.x.zip
keywords = django, geonode
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.10
packages = find:
setup_requires =
    setuptools
install_requires =
    # native dependencies
    Pillow
    psycopg2-binary
    Django>=4.2.1,<5.0

    hashids
    gdal==3.4.1

    # Other
    httplib2>=0.22.0
    hyperlink>=21.0.0
    Paver>=1.3.4
    python-slugify>=8.0.1
    decorator>=5.1.1
    tqdm
    Deprecated
    wrapt
    jsonschema
    zipstream-new
    schema
    rdflib
    smart_open
    PyMuPDF
    pathvalidate
    beautifulsoup4

    # Django Apps
    django-allauth
    django-appconf
    django-celery-results
    django-filter
    django-imagekit
    django-taggit
    django-markdownify>=0.9.3
    django-mptt
    django-modeltranslation>=0.11,<0.19.0
    django-treebeard
    django-guardian>=2.4.0
    django-downloadview>=2.3.0
    django-polymorphic>=3.1.0
    django-tastypie
    django-tinymce
    django-grappelli
    django-uuid-upload-path
    django-widget-tweaks
    django-sequences>=2.8
    oauthlib
    pyopenssl
    pyjwt

    # geopython dependencies
    pyproj
    OWSLib
    pycsw
    SQLAlchemy
    Shapely
    mercantile
    geoip2
    numpy

    # # Apps with packages provided in GeoNode's PPA on Launchpad.

    # Django Apps
    dj-database-url>=2.1.0
    # dj-pagination==2.5.0
    dj-pagination @ git+https://github.com/cesar-benjamin/dj-pagination@master#egg=dj-pagination
    django-select2>=8.1.2
    django-floppyforms
    django-forms-bootstrap>=3.1.0
    # django-autocomplete-light==3.5.1
    django-autocomplete-light==3.11.0rc1
    django-invitations>=2.1.0
    django-recaptcha>=4.0.0

    # REST
    djangorestframework>=3.14.0
    djangorestframework-gis>=1.0
    djangorestframework-guardian>=0.3.0
    drf-extensions>=0.7.1
    drf-writable-nested>=0.7.0
    drf-spectacular
    # dynamic-rest==2.1.2
    dynamic-rest @ git+https://github.com/cesar-benjamin/dynamic-rest.git@master#egg=dynamic-rest
    Markdown

    # pinax-notifications==6.0.0
    pinax-notifications @ git+https://github.com/cesar-benjamin/pinax-notifications.git@master#egg=pinax-notifications
    # pinax-ratings==4.0.0
    pinax-ratings @ git+https://github.com/cesar-benjamin/pinax-ratings.git@master#egg=pinax-ratings

    # GeoNode org maintained apps.
    # django-geonode-mapstore-client>=4.1.1,<5.0.0
    django_geonode_mapstore_client @ git+https://github.com/cesar-benjamin/geonode-mapstore-client.git@4.2.x#egg=django_geonode_mapstore_client
    # geonode-importer>=1.0.6
    geonode-importer @ git+https://github.com/cesar-benjamin/geonode-importer.git@master#egg=geonode-importer
    django-avatar>=8.0.0
    # geonode-oauth-toolkit==2.2.2
    geonode-oauth-toolkit @ git+https://github.com/cesar-benjamin/geonode-oauth-toolkit@master#egg=geonode-oauth-toolkit
    # geonode-user-messages==2.0.2
    geonode-user-messages @ git+https://github.com/cesar-benjamin/geonode-user-messages.git@master#egg=geonode-user-messages
    # geonode-announcements==2.0.2
    geonode-announcements @ git+https://github.com/cesar-benjamin/geonode-announcements.git@master#egg=geonode-announcements
    # geonode-django-activity-stream==0.10.0
    django-activity-stream
    gn-arcrest
    geoserver-restconfig
    gn-gsimporter
    gisdata

    # haystack/elasticsearch
    django-haystack
    elasticsearch>=2.0.0,<9.0.0

    # datetimepicker widget
    django-bootstrap3-datetimepicker-2

    # storage manager dependencies
    django-storages
    dropbox
    google-cloud-storage
    google-cloud-core
    boto3

    # Django Caches
    python-memcached
    whitenoise
    Brotli

    # Contribs
    jdcal
    mock
    python-dateutil
    pytz
    requests
    timeout-decorator
    pylibmc
    sherlock

    # required by monitoring
    psutil
    django-cors-headers
    user-agents
    django-user-agents
    xmljson
    django-ipware
    # no version here, use latest one with fresh data
    pycountry

    # production
    uWSGI
    gunicorn
    ipython
    docker
    invoke

    # tests
    coverage
    requests-toolbelt
    flake8
    black
    pytest
    pytest-bdd
    splinter
    pytest-splinter
    pytest-django
    setuptools
    pip
    Twisted
    pixelmatch
    factory-boy
    flaky
    selenium
    selenium-requests
    webdriver_manager

    # Security and audit
    mistune
    protobuf
    mako
    paramiko # not directly required, fixes Blowfish deprecation warning
    certifi # not directly required, pinned by Snyk to avoid a vulnerability
    jwcrypto # not directly required, pinned by Snyk to avoid a vulnerability
    cryptography # not directly required, pinned by Snyk to avoid a vulnerability

[options.packages.find]
exclude = tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 200
exclude=geonode/*/migrations/*,scripts,docs,static,migrations,node_modules
extend-ignore=E122,E124,E203,E731
